--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -222,11 +222,11 @@ If you prefer, you can impersonate a user right from the [Users](https://dashboa
   alt="The 'Users' page in the Clerk Dashboard. A red arrow points to the active 'Users' tab, showing users how to get to this page."
 />
 
-To impersonate a user, click on the 3 dots menu icon on the right side of a user's row. A dropdown menu will appear. When you click on the "Impersonate user" option, your application instance should open in a new tab with the impersonated user signed in.
+To impersonate a user, click on the menu icon on the right side of a user's row. A dropdown menu will appear. When you click on the "Impersonate user" option, your application instance should open in a new tab with the impersonated user signed in.
 
 <Images
-  width={}
-  height={}
+  width={3024}
+  height={1648}
   src="/docs/images/custom-flows/impersonate-user.jpg"
   alt="The 'Users' page in the Clerk Dashboard. A red arrow points to the 3 dots menu icon on the right side of a user's row. A dropdown menu is shown a red arrow pointing to the hovered-over 'Impersonate user' option."
 />
