fix broken links

--- a/docs/custom-flows/user-impersonation.mdx
+++ b/docs/custom-flows/user-impersonation.mdx
@@ -22,7 +22,7 @@ Clerk allows developers or admins of an application to sign in as different user
 
 ## Actor tokens
 
-Actor tokens are similar to [sign-in tokens](/docs/reference/backend-api/tag/Sign-in-Tokens#operation/CreateSignInToken). They can be used for one-time logins, but they result in impersonated sessions. You can obtain an actor token from our [Backend API](/docs/reference/backend-api/tag/Actor-Tokens#operation/CreateActorToken).
+Actor tokens are similar to [sign-in tokens](https://clerk.com/docs/reference/backend-api/tag/Sign-in-Tokens#operation/CreateSignInToken). They can be used for one-time logins, but they result in impersonated sessions. You can obtain an actor token from our [Backend API](https://clerk.com/docs/reference/backend-api/tag/Actor-Tokens#operation/CreateActorToken).
 
 Actor tokens need to declare the impersonator user (**actor**) and the impersonated user (**subject**). When Alice decides to impersonate Bob, she will issue an actor token. Alice is the actor and Bob is the subject of the Impersonation.
 
@@ -56,7 +56,7 @@ The above request will revoke the actor token with ID `act_2EL6mQKzeUtoRwGuLZszn
 
 Actor tokens are consumed the same way as sign in tokens.
 
-Actor tokens can be [created from the Backend API](/docs/reference/backend-api/tag/Actor-Tokens#operation/CreateActorToken). Once you've successfully created an actor token, you can use the `url` attribute of the response to consume the token and impersonate a user.
+Actor tokens can be [created from the Backend API](https://clerk.com/docs/reference/backend-api/tag/Actor-Tokens#operation/CreateActorToken). Once you've successfully created an actor token, you can use the `url` attribute of the response to consume the token and impersonate a user.
 
 The `url` attribute is a [Clerk Frontend API](https://reference.clerk.dev/reference/frontend-api-reference) URL that will use the token to sign out existing users and prepare the sign-in object for impersonation. You can directly visit the `url` provided in the response to consume the actor token.
 
