fix broken link

--- a/docs/custom-flows/embedded-magic-links.mdx
+++ b/docs/custom-flows/embedded-magic-links.mdx
@@ -16,7 +16,7 @@ Common use cases include:
 
 ## Creating magic links
 
-Embeddable magic links leverage [sign-in tokens](/docs/reference/backend-api/tag/Sign-in-Tokens#operation/CreateSignInToken) which can be created from your backend.
+Embeddable magic links leverage [sign-in tokens](https://clerk.com/docs/reference/backend-api/tag/Sign-in-Tokens#operation/CreateSignInToken) which can be created from your backend.
 
 ```bash
 curl --request POST \
