--- a/docs/custom-flows/error-handling.mdx
+++ b/docs/custom-flows/error-handling.mdx
@@ -5,7 +5,7 @@ description: Provide your users with useful information about the errors being r
 
 # Error handling
 
-When using the `signUp()` or `signIn()` functions, proper error handling can help you provide your users with useful feedback.
+When using the [`signUp()`](/docs/references/react/use-sign-up) or [`signIn()`](/docs/references/react/use-sign-in) functions, proper error handling can help you provide your users with useful feedback.
 
 ## Example
 
@@ -55,7 +55,7 @@ const signUp = await client.signUp.create({
 ```
 </CodeBlockTabs>
 
-Errors returned from the `signIn()` function are handled in a similar way:
+Errors returned from the [`signIn()`](/docs/references/react/use-sign-in) function are handled in a similar way:
 
 <CodeBlockTabs options={["React", "JavaScript"]}>
 ```jsx
