migrate page from sanity to mdx

--- a/docs/integrations/webhooks.mdx
+++ b/docs/integrations/webhooks.mdx
@@ -3,48 +3,41 @@ title: Webhooks
 description: Clerk webhooks allow you to receive event notifications from Clerk. Clerk will send a POST request to a URL you specify when certain events happen in your Clerk account.
 ---
 
-import {Steps} from "nextra-theme-docs";
-import { Callout } from "nextra-theme-docs";
-import { YouTube } from "@/components/Youtube";
-import { Images } from "@/components/Images";
-import {Cards} from "@/components/Cards";
-import { CodeBlockTabs } from "@/components/CodeBlockTabs";
-
 # Webhooks
 
-Clerk webhooks allow you to receive event notifications from Clerk. Clerk will send a POST request to a URL you specify when certain events happen in your Clerk account.
+Clerk webhooks allow you to receive event notifications from Clerk. Clerk will send a `POST` request to a URL you specify when certain events happen in your Clerk account.
 
-Clerk uses Svix to send our webhooks and you can find more information about Svix [here](https://svix.com/). 
+Clerk uses [Svix](https://svix.com/) to send our webhooks. 
 
-You can find the Webhook signing secret when you click on the endpoint you created under Webhooks on the Clerk dashboard.
+You can find the Webhook signing secret when you click on the endpoint you created under [Webhooks](https://dashboard.clerk.com/last-active?path=webhooks) in the Clerk dashboard.
 
 ## Supported webhook events
 
 #### Emails
-- email.created
+- `email.created`
 #### Organization
-- organization.created
-- organization.deleted
-- organization.updated
+- `organization.created`
+- `organization.deleted`
+- `organization.updated`
 #### Organization Invitation
-- organizationInvitation.accepted
-- organizationInvitation.created
-- organizationInvitation.revoked
+- `organizationInvitation.accepted`
+- `organizationInvitation.created`
+- `organizationInvitation.revoked`
 #### Organization Membership
-- organizationMembership.created
-- organizationMembership.deleted
-- organizationMembership.updated
+- `organizationMembership.created`
+- `organizationMembership.deleted`
+- `organizationMembership.updated`
 #### Session
-- session.created
-- session.ended
-- session.removed
-- session.revoked
+- `session.created`
+- `session.ended`
+- `session.removed`
+- `session.revoked`
 #### SMS
-- sms.created
+- `sms.created`
 #### User
-- user.created
-- user.deleted
-- user.updated
+- `user.created`
+- `user.deleted`
+- `user.updated`
 
 ## Payload structure
 
