--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -3,9 +3,7 @@ title: Convex
 description: Learn how to integrate Clerk into your Convex application.
 ---
 
-# Convex
-
-## Getting started
+# Getting started
 
 Navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt-templates) screen from the Clerk Dashboard. Click on the **New template** button to create a new template based on Convex.
 
