reorganize images; compress to webp instead of jpg

--- a/docs/integrations/databases/convex.mdx
+++ b/docs/integrations/databases/convex.mdx
@@ -10,7 +10,7 @@ Navigate to the [JWT Templates](https://dashboard.clerk.com/last-active?path=jwt
 <Images
   width={3024}
   height={1648}
-  src="/docs/images/custom-flows/jwt-templates-convex.jpg"
+  src="/docs/images/integrations/convex/jwt-templates.webp"
   alt="The JWT Templates page in the Clerk Dashboard. The 'New template' button was clicked, and a pop up titled 'New JWT template' is shown. The 'Convex' template is hovered over."
 />
 
@@ -19,7 +19,7 @@ Once the Convex template is created, you will be redirected to the template's pa
 <Images
   width={3024}
   height={1648}
-  src="/docs/images/custom-flows/convex-create-template.jpg"
+  src="/docs/images/integrations/convex/create-template.webp"
   alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard."
 />
 
@@ -28,7 +28,7 @@ The Convex template will pre-populate the default audience (`aud`) claim require
 <Images
   width={3024}
   height={1648}
-  src="/docs/images/custom-flows/convex-template-shortcodes.jpg"
+  src="/docs/images/integrations/convex/template-shortcodes.webp"
   alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard. The page is scrolled down to the 'Claims' section."
 />
 
@@ -45,7 +45,7 @@ The next step is to configure Convex with the issuer domain provided by Clerk. F
 <Images
   width={3024}
   height={1648}
-  src="/docs/images/custom-flows/convex-template-issuer.jpg"
+  src="/docs/images/integrations/convex/template-issuer.webp"
   alt="The 'Create new template' page of the JWT Templates page in the Clerk Dashboard. The page is scrolled down to the 'Claims' section."
 />
 
