fix image name; update copy

--- a/docs/integrations/databases/fauna.mdx
+++ b/docs/integrations/databases/fauna.mdx
@@ -25,9 +25,9 @@ The next step is to head over to the Fauna database that you want Clerk-authenti
   alt="The Security page in the Fauna dashboard. The Providers tab is the active tab."
 />
 
-Click the New Access Provider button.
+Click the **New Access Provider** button.
 
-Enter a name in the Name field that will identify this access provider. The recommendation is to use “Clerk”.
+Enter a name in the **Name** field that will identify this access provider. The recommendation is to use “Clerk”.
 
 Paste the **Publishable key** you copied from the Clerk Dashboard into the **Issuer** field and then prefix it with the `https://` protocol so it follows `https://<YOUR_PUBLISHABLE_KEY>`
 
@@ -79,7 +79,7 @@ Once the Convex template is created, you will be redirected to the template's pa
   alt="The 'New access provider' form in Fauna.'"
 />
 
-Add in the `aud` claim set to the **Audience URL** you copied from Fauna. The URL format should be `https://db.fauna.com/db/<YOUR_FAUNA_DB_ID>`.
+Scroll down to the **Claims** section and set the `aud` claim to the **Audience URL** you copied from Fauna. The URL format should be `https://db.fauna.com/db/<YOUR_FAUNA_DB_ID>`.
 
 <Images
   width={3024}
@@ -88,7 +88,7 @@ Add in the `aud` claim set to the **Audience URL** you copied from Fauna. The UR
   alt="The 'New access provider' form in Fauna.'"
 />
 
-You can include additional claims if you’d like, but aud is the only required one. [Shortcodes](/docs/backend-requests/making/jwt-templates#shortcodes) are available to make adding dynamic user values easy.
+You can include additional claims if you’d like, but `aud` is the only required one. [Shortcodes](/docs/backend-requests/making/jwt-templates#shortcodes) are available to make adding dynamic user values easy.
 
 Don't forget to click the **Apply changes** button at the bottom right to save your Fauna JWT template.
 
@@ -134,5 +134,4 @@ const Example = () => {
 
 - Replace the [Fauna JavaScript driver](https://docs.fauna.com/fauna/current/drivers/) with a GraphQL client like [Apollo](https://github.com/apollographql/apollo-client) or [graphql-request​](https://github.com/jasonkuhrt/graphql-request).
 - Try adding some [custom claims](/docs/backend-requests/making/jwt-templates) to the JWT token.
-- Get [support](https://clerk.com/support) or at least say hi in our [Discord](https://clerk.com/discord) channel.
 
