Add OrganizationList component image, small edits

--- a/docs/organizations/verified-domains.mdx
+++ b/docs/organizations/verified-domains.mdx
@@ -7,7 +7,7 @@ description: Learn about how to use verified domains for organizations
 
 Domains can be added and verified under an organization by administrators. In order to enable this feature, make sure to enable verified domains in the dashboard's _Organization Settings > Verified domains_. The only parameter needed to to create an organization domain is the `name`.
 
-Domains can be verified through an email verfication code sent to an email that uses the domain. If the administrator adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
+Domains can be verified through an email verfication code sent to an email that matches the domain. If the administrator adding the domain already has a verified email using that domain in their account, the domain will be automatically verified.
 
 An instance may only have one verified domain of same name, and an organization may only have one domain of the same name (verified or unverified).
 
