Updated Route Handlers with callout and link to clerkClient docs.

--- a/docs/references/nextjs/route-handlers.mdx
+++ b/docs/references/nextjs/route-handlers.mdx
@@ -85,3 +85,9 @@ export async function POST() {
 }
 
 ```
+
+<Callout type="info">
+
+Please see [Clerk Backend SDK](/docs/references/backend/overview) for a full reference on using `clerkClient` in your application.
+
+</Callout>
