fix: corrected typeof showName in UserButton props

--- a/docs/components/user/user-button.mdx
+++ b/docs/components/user/user-button.mdx
@@ -214,7 +214,7 @@ All props below are optional.
     {
       cells: [
         <code>showName</code>,
-        <code>string</code>,
+        <code>boolean</code>,
         <>Controls if the user name is displayed next to the user image button.</>,
       ],
     },
