--- a/docs/quickstarts/remix.mdx
+++ b/docs/quickstarts/remix.mdx
@@ -43,7 +43,7 @@ CLERK_SECRET_KEY={{secret}}
 
 To configure Clerk in your Remix application, you will need to update your root loader. This will enable you to have access to authentication state in any Remix routes.
 
-```tsx filename="app.tsx"
+```tsx filename="app/root.tsx"
 import type { MetaFunction, LoaderFunction } from "@remix-run/node";
 import {
   Links,
