apply code review suggestions

--- a/docs/custom-flows/magic-links.mdx
+++ b/docs/custom-flows/magic-links.mdx
@@ -94,11 +94,11 @@ The sign-up process can be completed on the same or a different device. For exam
 
 Let's see all the steps involved in more detail.
 
-- Initiate the sign-up process by collecting the user's identifier. It must be their email address.
-- Start the magic link verification flow. - There are two parts to the flow:
+1. Initiate the sign-up process by collecting the user's identifier. It must be their email address.
+2. Start the magic link verification flow. There are two parts to the flow:
   - Prepare a verification for the email address by sending an email with a magic link to the user.
   - Wait until the magic link is clicked. This is a polling behavior that can be canceled at any time.
-- Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
+3. Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
   - The verification was successful so you need to continue with the sign-up flow.
   - The verification failed or the magic link has expired.
 
@@ -485,19 +485,19 @@ cancelMagicLinkFlow();
 ```
 </CodeBlockTabs>
 
-Sign in using a custom flow
+### Sign in using a custom flow
+
 Signing users into your application is probably the most popular use case for magic links. Users enter their email address and then click on a link that's delivered to them via email message in order to log in.
 
 The sign-in process can be completed on the same or a different device. For example, users might enter their email address in their desktop browser, but click the sign-in magic link from their mobile phone. The user's email address will still be verified and authentication will proceed.
 
 Let's see all the steps involved in more detail.
 
-- Initiate the sign-in process, by collecting the user's authentication identifier. It must be their email address.
-- Start the magic link verification flow. 
-- There are two parts to the flow:
+1. Initiate the sign-in process, by collecting the user's authentication identifier. It must be their email address.
+2. Start the magic link verification flow. There are two parts to the flow:
   - Prepare a verification for the email address by sending an email with a magic link to the user.
   - Wait until the magic link is clicked. This is a polling behavior that can be canceled at any time.
-- Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
+3. Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
   - The verification was successful so you need to continue with the sign-in flow.
   - The verification failed or the magic link has expired.
 
@@ -887,11 +887,11 @@ cancelMagicLinkFlow();
 
 Magic links can also provide a nice user experience for verifying email addresses that users add when updating their profiles. The flow is similar to one-time code verification, but users need only click on the magic link; there's no need to return to your app.
 
-- Collect the user's email address.
-- Start the magic link verification flow. There are two parts to the flow:
+1. Collect the user's email address.
+2. Start the magic link verification flow. There are two parts to the flow:
   - Prepare a verification for the email address by sending an email with a magic link to the user.
   - Wait until the magic link is clicked. This is a polling behavior that can be canceled at any time.
-- Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
+3. Handle the magic link verification result accordingly. Note that the magic link can be clicked on a different device/browser than the one which initiated the flow.
   - The verification was successful.
   - The verification failed or the magic link has expired.
 
