add app vs pages router

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -15,6 +15,7 @@ The Backend SDK is accessible via the `clerkClient` object if you are using Next
 
 This example shows how to update a user's profile information. See the [`updateUser()`](/docs/references/backend/user/update-user) documentation for more information.
 
+<CodeBlockTabs options={["App Router", "Pages Router"]}>
 ```tsx filename="app/page.[jsx/tsx]"
 import { NextResponse } from 'next/server';
 import { auth, clerkClient } from '@clerk/nextjs';
@@ -33,6 +34,26 @@ export async function POST() {
   return NextResponse.json({ user });
 }
 ```
+
+```tsx filename="pages/api/updateUser.[jsx/tsx]"
+import { NextResponse } from 'next/server';
+import { auth, clerkClient } from '@clerk/nextjs';
+
+export async function POST() {
+  // Get the user ID from the session
+  const { userId } = auth();
+
+  if (!userId) return NextResponse.redirect('/sign-in');
+  
+  // The user attributes to update
+  const params = { firstName: 'John', lastName: 'Wick' };
+
+  const user = await clerkClient.users.updateUser(userId, params);
+
+  return NextResponse.json({ user });
+}
+```
+</CodeBlockTabs>
 </Tab>
 
 <Tab>
