--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -77,7 +77,7 @@ export async function POST(req: NextApiRequest, res: NextApiResponse) {
   return res.json({ user });
 }
 ```
-<Tab>
+</Tab>
 </Tabs>
 
 ## User operations
