move code examples to dedicated method page

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -7,75 +7,40 @@ description: The Clerk Backend SDK exposes Clerk's backend API resources and low
 
 The [Clerk Backend SDK](https://github.com/clerkinc/javascript/tree/main/packages/backend) exposes Clerk's backend API resources and low-level authentication utilities for JavaScript environments. While the backend SDK is mainly used as a building block for Clerk's higher-level SDKs, it can also be used on its own for advanced flows and custom integrations.
 
-Clerk's Next.js and Node SDKs expose an instance of the Clerk Backend SDK for use in server environments.
+Clerk's SDKs expose an instance of the Clerk Backend SDK for use in server environments.
 
-<Tabs items={["Next.js", "Node"]}>
+<Tabs items={["Next.js", "Remix", "Fastify", "Node"]}>
 <Tab>
 The Backend SDK is accessible via the `clerkClient` object if you are using Next.js.
 
-This example shows how to update a user's profile information. See the [`updateUser()`](/docs/references/backend/user/update-user) documentation for more information.
-
-<CodeBlockTabs options={["App Router", "Pages Router"]}>
-```tsx filename="app/page.[jsx/tsx]"
-import { NextResponse } from 'next/server';
-import { auth, clerkClient } from '@clerk/nextjs';
-
-export async function POST() {
-  // Get the user ID from the session
-  const { userId } = auth();
-
-  if (!userId) return NextResponse.redirect('/sign-in');
-  
-  // The user attributes to update
-  const params = { firstName: 'John', lastName: 'Wick' };
-
-  const user = await clerkClient.users.updateUser(userId, params);
-
-  return NextResponse.json({ user });
-}
+```jsx
+import { clerkClient } from '@clerk/nextjs';
 ```
+</Tab>
 
-```tsx filename="pages/api/updateUser.[jsx/tsx]"
-import { NextResponse } from 'next/server';
-import { auth, clerkClient } from '@clerk/nextjs';
+<Tab>
+Something about createClerkClient with Remix
 
-export async function POST() {
-  // Get the user ID from the session
-  const { userId } = auth();
+```jsx
+import { createClerkClient } from '@clerk/remix/api.server';
 
-  if (!userId) return NextResponse.redirect('/sign-in');
-  
-  // The user attributes to update
-  const params = { firstName: 'John', lastName: 'Wick' };
-
-  const user = await clerkClient.users.updateUser(userId, params);
-
-  return NextResponse.json({ user });
-}
+const user = await createClerkClient({secretKey: process.env.CLERK_SECRET_KEY}).users.getUser(userId);
 ```
-</CodeBlockTabs>
+</Tab>
+
+<Tab>
+The Backend SDK is accessible via the `clerkClient` object if you are using Fastify.
+
+```jsx
+import { clerkClient } from "@clerk/fastify";
+```
 </Tab>
 
 <Tab>
 The Backend SDK is accessible via the `clerk` object if you are using Node.
 
 ```js
-import { NextApiRequest, NextApiResponse } from 'next';
 import { clerk } from '@clerk/clerk-sdk-node';
-
-export async function POST(req: NextApiRequest, res: NextApiResponse) {
-  // Get the user ID from the session
-  const { userId } = req.session;
-
-  if (!userId) return res.redirect('/sign-in');
-  
-  // The user attributes to update
-  const params = { firstName: 'John', lastName: 'Wick' };
-
-  const user = await clerk.users.updateUser(userId, params);
-
-  return res.json({ user });
-}
 ```
 </Tab>
 </Tabs>
