--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -34,3 +34,63 @@ const user = await clerkClient.users.updateUser(userId, params);
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
 | `unsafeMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
 
+## Example
+
+<CodeBlockTabs options={["Next.js App Router", "Next.js Pages Router", "Node"]}>
+```tsx filename="app/page.[jsx/tsx]"
+import { NextResponse } from 'next/server';
+import { auth, clerkClient } from '@clerk/nextjs';
+
+export async function POST() {
+  // Get the user ID from the session
+  const { userId } = auth();
+
+  if (!userId) return NextResponse.redirect('/sign-in');
+  
+  // The user attributes to update
+  const params = { firstName: 'John', lastName: 'Wick' };
+
+  const user = await clerkClient.users.updateUser(userId, params);
+
+  return NextResponse.json({ user });
+}
+```
+
+```tsx filename="pages/api/updateUser.[jsx/tsx]"
+import { NextResponse } from 'next/server';
+import { auth, clerkClient } from '@clerk/nextjs';
+
+export async function POST() {
+  // Get the user ID from the session
+  const { userId } = auth();
+
+  if (!userId) return NextResponse.redirect('/sign-in');
+  
+  // The user attributes to update
+  const params = { firstName: 'John', lastName: 'Wick' };
+
+  const user = await clerkClient.users.updateUser(userId, params);
+
+  return NextResponse.json({ user });
+}
+```
+
+```js filename="updateUser.js"
+import { NextApiRequest, NextApiResponse } from 'next';
+import { clerk } from '@clerk/clerk-sdk-node';
+
+export async function POST(req: NextApiRequest, res: NextApiResponse) {
+  // Get the user ID from the session
+  const { userId } = req.session;
+
+  if (!userId) return res.redirect('/sign-in');
+  
+  // The user attributes to update
+  const params = { firstName: 'John', lastName: 'Wick' };
+
+  const user = await clerk.users.updateUser(userId, params);
+
+  return res.json({ user });
+}
+```
+</CodeBlockTabs>
