--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -19,7 +19,11 @@ import { clerkClient } from '@clerk/nextjs';
 </Tab>
 
 <Tab>
-Something about createClerkClient with Remix
+The Backend SDK is accessible via the `createClerkClient` function if you are using Remix. 
+
+You will need your `CLERK_SECRET_KEY` to initialize the SDK, which you can find in the [API Keys](https://dashboard.clerk.com/last-active?path=) section in the Clerk Dashboard.
+
+This example shows how to access the `users` sub-api from the Backend SDK. The [`getUser`](/docs/references/backend/get-user) method is then used to retrieve a user by their user ID.
 
 ```jsx
 import { createClerkClient } from '@clerk/remix/api.server';
