use consistent language: Clerk SDKs instead of Clerk's SDKs

--- a/docs/references/backend/overview.mdx
+++ b/docs/references/backend/overview.mdx
@@ -7,7 +7,7 @@ description: The Clerk Backend SDK exposes Clerk's backend API resources and low
 
 The [Clerk Backend SDK](https://github.com/clerkinc/javascript/tree/main/packages/backend) exposes Clerk's backend API resources and low-level authentication utilities for JavaScript environments. While the backend SDK is mainly used as a building block for Clerk's higher-level SDKs, it can also be used on its own for advanced flows and custom integrations.
 
-Clerk's SDKs expose an instance of the Clerk Backend SDK for use in server environments.
+Clerk SDKs expose an instance of the Clerk Backend SDK for use in server environments.
 
 <Tabs items={["Next.js", "Remix", "Fastify", "Node"]}>
 <Tab>
