--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -34,7 +34,7 @@ const user = await clerkClient.users.updateUser(userId, params);
 | `privateMetadata?` | `Record<string, unknown>` | Metadata saved on the user that is only visible to your Backend API. |
 | `unsafeMetadata?` | `Record<string, unknown>` | Metadata saved on the user, that can be updated from both the Frontend and Backend APIs. **Note:** Since this data can be modified from the frontend, it is not guaranteed to be safe. |
 
-## Example
+## Examples
 
 <CodeBlockTabs options={["Next.js App Router", "Next.js Pages Router", "Node"]}>
 ```tsx filename="app/page.[jsx/tsx]"
