remove next code from node example

--- a/docs/references/backend/user/update-user.mdx
+++ b/docs/references/backend/user/update-user.mdx
@@ -76,10 +76,9 @@ export async function POST() {
 ```
 
 ```js filename="updateUser.js"
-import { NextApiRequest, NextApiResponse } from 'next';
 import { clerk } from '@clerk/clerk-sdk-node';
 
-export async function POST(req: NextApiRequest, res: NextApiResponse) {
+export async function POST(req, res) {
   // Get the user ID from the session
   const { userId } = req.session;
 
