Align with nextJS api route handler docs (#325)

--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -22,7 +22,7 @@ const { userId } : { userId: string | null } = auth();
 
 When using a Clerk integration, or if you need to send a JWT along to a server, you can use the `getToken` function.
 
-```tsx filename="app/page.[jsx/tsx]"
+```tsx filename="app/api/example/route.[jsx/tsx]"
 import { NextResponse } from 'next/server';
 import { auth } from '@clerk/nextjs';
 
